@@ -2,6 +2,12 @@
   - remove rest of list context @ error check becuase SPVM can not define list context correctly
   - add oarray type to implement sort algorithm
   - fix native and precompile file path bug
+  - add equals_barray core function
+  - add equals_sarray core function
+  - add equals_iarray core function
+  - add equals_larray core function
+  - add equals_farray core function
+  - add equals_darray core function
 0.0410 2018-01-16
   - Fix realese of 0.0409
 0.0409 2018-01-16
